cmake_minimum_required(VERSION 3.1)
set(SRC main.cpp)
set(CMAKE_CXX_STANDARD 17)
include_directories(~/Skylab/VTK/VTK-9.0.1/build/install/include/vtk-9.0)
link_directories(~/Skylab/VTK/VTK-9.0.1/build/install/lib/)
add_executable(test ${SRC})
target_link_libraries(test 
	"-framework Cocoa"
	"-framework opengl"
libvtkChartsCore-9.0.a
libvtkCommonColor-9.0.a
libvtkCommonComputationalGeometry-9.0.a
libvtkCommonCore-9.0.a
libvtkCommonDataModel-9.0.a
libvtkCommonExecutionModel-9.0.a
libvtkCommonMath-9.0.a
libvtkCommonMisc-9.0.a
libvtkCommonSystem-9.0.a
libvtkCommonTransforms-9.0.a
libvtkDICOMParser-9.0.a
libvtkDomainsChemistry-9.0.a
libvtkFiltersAMR-9.0.a
libvtkFiltersCore-9.0.a
libvtkFiltersExtraction-9.0.a
libvtkFiltersFlowPaths-9.0.a
libvtkFiltersGeneral-9.0.a
libvtkFiltersGeneric-9.0.a
libvtkFiltersGeometry-9.0.a
libvtkFiltersHybrid-9.0.a
libvtkFiltersHyperTree-9.0.a
libvtkFiltersImaging-9.0.a
libvtkFiltersModeling-9.0.a
libvtkFiltersParallel-9.0.a
libvtkFiltersParallelImaging-9.0.a
libvtkFiltersPoints-9.0.a
libvtkFiltersProgrammable-9.0.a
libvtkFiltersSMP-9.0.a
libvtkFiltersSelection-9.0.a
libvtkFiltersSources-9.0.a
libvtkFiltersStatistics-9.0.a
libvtkFiltersTexture-9.0.a
libvtkFiltersTopology-9.0.a
libvtkFiltersVerdict-9.0.a
libvtkGeovisCore-9.0.a
libvtkIOAMR-9.0.a
libvtkIOAsynchronous-9.0.a
libvtkIOCityGML-9.0.a
libvtkIOCore-9.0.a
libvtkIOEnSight-9.0.a
libvtkIOExodus-9.0.a
libvtkIOExport-9.0.a
libvtkIOExportGL2PS-9.0.a
libvtkIOExportPDF-9.0.a
libvtkIOGeometry-9.0.a
libvtkIOImage-9.0.a
libvtkIOImport-9.0.a
libvtkIOInfovis-9.0.a
libvtkIOLSDyna-9.0.a
libvtkIOLegacy-9.0.a
libvtkIOMINC-9.0.a
libvtkIOMotionFX-9.0.a
libvtkIOMovie-9.0.a
libvtkIONetCDF-9.0.a
libvtkIOOggTheora-9.0.a
libvtkIOPLY-9.0.a
libvtkIOParallel-9.0.a
libvtkIOParallelXML-9.0.a
libvtkIOSQL-9.0.a
libvtkIOSegY-9.0.a
libvtkIOTecplotTable-9.0.a
libvtkIOVeraOut-9.0.a
libvtkIOVideo-9.0.a
libvtkIOXML-9.0.a
libvtkIOXMLParser-9.0.a
libvtkImagingColor-9.0.a
libvtkImagingCore-9.0.a
libvtkImagingFourier-9.0.a
libvtkImagingGeneral-9.0.a
libvtkImagingHybrid-9.0.a
libvtkImagingMath-9.0.a
libvtkImagingMorphological-9.0.a
libvtkImagingSources-9.0.a
libvtkImagingStatistics-9.0.a
libvtkImagingStencil-9.0.a
libvtkInfovisCore-9.0.a
libvtkInfovisLayout-9.0.a
libvtkInteractionImage-9.0.a
libvtkInteractionStyle-9.0.a
libvtkInteractionWidgets-9.0.a
libvtkParallelCore-9.0.a
libvtkParallelDIY-9.0.a
libvtkRenderingAnnotation-9.0.a
libvtkRenderingContext2D-9.0.a
libvtkRenderingCore-9.0.a
libvtkRenderingFreeType-9.0.a
libvtkRenderingGL2PSOpenGL2-9.0.a
libvtkRenderingImage-9.0.a
libvtkRenderingLOD-9.0.a
libvtkRenderingLabel-9.0.a
libvtkRenderingOpenGL2-9.0.a
libvtkRenderingSceneGraph-9.0.a
libvtkRenderingUI-9.0.a
libvtkRenderingVolume-9.0.a
libvtkRenderingVolumeOpenGL2-9.0.a
libvtkRenderingVtkJS-9.0.a
libvtkTestingRendering-9.0.a
libvtkViewsContext2D-9.0.a
libvtkViewsCore-9.0.a
libvtkViewsInfovis-9.0.a
libvtkWrappingTools-9.0.a
libvtkdoubleconversion-9.0.a
libvtkexodusII-9.0.a
libvtkexpat-9.0.a
libvtkfreetype-9.0.a
libvtkgl2ps-9.0.a
libvtkglew-9.0.a
libvtkhdf5-9.0.a
libvtkhdf5_hl-9.0.a
libvtkjpeg-9.0.a
libvtkjsoncpp-9.0.a
libvtklibharu-9.0.a
libvtklibproj-9.0.a
libvtklibxml2-9.0.a
libvtkloguru-9.0.a
libvtklz4-9.0.a
libvtklzma-9.0.a
libvtkmetaio-9.0.a
libvtknetcdf-9.0.a
libvtkogg-9.0.a
libvtkpng-9.0.a
libvtkpugixml-9.0.a
libvtksqlite-9.0.a
libvtksys-9.0.a
libvtktheora-9.0.a
libvtktiff-9.0.a
libvtkverdict-9.0.a
libvtkzlib-9.0.a
)
